k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /backend
        pathType: ImplementationSpecific
        backend:
          service:
            name: arete-backend-gateway
            port:
              number: 3000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: arete-frontend-service
            port:
              number: 3100
  tls:
  - hosts:
    - risewitharete.online
    secretName: my-tls-secret
